--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -134,10 +134,32 @@
   }
 }
 
-
+// post details
 $detail_col_padding_top: 101px;
+
 .posts.show {
   .detail-page {
+    .modal {
+      .send-btn {
+        i {
+          display: none;
+        }
+
+        &.loading {
+          i {
+            display: inline-block;
+            -webkit-animation:spin 1s linear infinite;
+            -moz-animation:spin 1s linear infinite;
+            animation:spin 1s linear infinite;
+          }
+        }
+
+        @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+        @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+        @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+      }
+    }
+
     .sharing {
       padding-top: $detail_col_padding_top;
       a {
