--- a/app/views/giveaways/select_category.html.erb
+++ b/app/views/giveaways/select_category.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 class="section-header">Choose a category</h2>
+  <h2 class="section-header"><%= t('giveaway.select_category') %></h2>
   <%= render partial: 'category', collection: @categories %>
 </div>
 <script>
