--- a/app/assets/stylesheets/bootstrap-fix.scss
+++ b/app/assets/stylesheets/bootstrap-fix.scss
@@ -1,3 +1,10 @@
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Roboto Slab', serif;
+}
+p, div {
+  font-family: 'Roboto Slab', serif;
+}
+
 .checkbox label input {
   margin-right: 6px;
 }
