--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -20,6 +20,22 @@
       <p class="extended-description">
         <%= @post.description %>
       </p>
+      <div class="row">
+        <ul class="list-group">
+          <% @post.requests.each do |request| %>
+            <li class="list-group-item">
+              <h4 class="list-group-item-heading"><%= request.user.email %></h4>
+              <p class="list-group-item-text">
+                <%= request.content %> 
+              </p>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+      <br/>
+      <div class="row">
+        <%= render "requests/form" %>
+      </div>
     </div>
 
     <!-- tool bar -->
@@ -80,7 +96,7 @@
 
     </div>
   </div>
-</div>
+  </div>
 
 <script type="text/javascript">
   $(".post-image").error(function () {
