--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -1,10 +1,8 @@
-<%= simple_form_for(@request) do |f| %>
+<%= simple_form_for([@post, @post.requests.build]) do |f| %>
   <%= f.error_notification %>
-
+  
   <div class="form-inputs">
-    <%= f.input :content %>
-    <%= f.association :post %>
-    <%= f.association :user %>
+    <%= f.input :content, :label => "Request this item" %>
   </div>
 
   <div class="form-actions">
