--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -206,6 +206,10 @@
 
         <div class="col-md-12 align-center">
           <p class="copyright">© Copyright 2016. All Rights Reserved | Powered by Diglett Team</p>
+          <span class="language-selection pull-md-right pull-lg-right">
+            <a href="?lang=vi">Tiếng Việt</a>|
+            <a href="?lang=en">English</a>
+          </span>
         </div>
 
       </div>
