--- a/app/assets/stylesheets/multi-screen.scss
+++ b/app/assets/stylesheets/multi-screen.scss
@@ -9,44 +9,26 @@
         top: 0;
         height: 70px;
         width: 100%;
-        background: rgba(245,245,245,1);
-
-        .navbar-brand {
-          .fa {
-            transition: top 0.2s;
-            top: 11px;
-          }
-        }
-
-        .form-search {
-          transition: top 0.2s;
-
-          top: -4px;
-        }
-
-        .dropdown-toggle {
-          margin-top: 20px !important;
-        }
       }
     }
   }
 
   .header .navbar-header {
-    &.is-fixed {
-      position: fixed;
-      left: 0;
-      top: 0;
-      height: 70px;
-      width: 100%;
-    }
+    // &.is-fixed {
+    //   position: fixed;
+    //   left: 0;
+    //   top: 0;
+    //   height: 70px;
+    //   width: 100%;
+    // }
 
-    &.animate-children {
-      .nav-item {
-        .nav-link {
-          padding: 10px 30px !important;
-        }
-      }
-    }
+    // &.animate-children {
+    //   .nav-item {
+    //     .nav-link {
+    //       padding: 10px 30px !important;
+    //     }
+    //   }
+    // }
 
     .navbar-container {
       .navbar {
