--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,15 @@
+<%= content_for(:meta_og) do %>
+    <meta property="og:title" content="<%= @post.title %>" />
+    <meta property="og:type" content="article" />
+    <meta property="og:published_time" content="<%= @post.created_at.strftime('%Y-%m-%d %H:%M') %>" />
+    <meta property="og:url" content="<%= request.original_url %>" />
+    <meta property="og:description" content="<%= truncate(strip_tags( @post.description ), length: 50) %>" />
+    <% if @post.main_image %>
+        <%= tag :meta, property: 'og:image', content: "#{@post.main_image.url}" %>
+    <% end %>
+<% end %>
+
+
 <div class="container detail-page p-b-3">
   <div class="row">
 
