--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -66,7 +66,7 @@
           <%= @campaign.location %>
         </div>
 
-        <div class="col-md-12">
+        <div class="col-md-12" style="display:none">
           <h3> Hornorable donations </h3>
           <ul class="list-group" id="donations">
             <% @campaign.donations.each do |donation| %>
