--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -16,7 +16,7 @@ $introduction_height: 550px;
 
   .introduction {
     width: 100%;
-    font-family: "Gotham SSm A";
+    font-family: Gotham;
 
     .ads {
       width: 100%;
@@ -60,7 +60,7 @@ $introduction_height: 550px;
   }
 
   .overview {
-    font-family: "Gotham SSm A";
+    font-family: Gotham;
     color: #fff;
     background-color: #5bc0de;
 
@@ -79,7 +79,7 @@ $introduction_height: 550px;
   }
 
   .campaign {
-    font-family: "Gotham SSm A";
+    font-family: Gotham;
     color: #fff;
     background-color: #CD2348;
 
