--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -59,16 +59,6 @@
 
       <button class="btn btn-primary btn-block" data-toggle="modal" data-target=".claim-model"><%= t(".request_now") %></button>
       <button class="btn btn-info btn-block" data-toggle="modal" data-target=".send-message-model"><%= t(".send_message") %></button>
-
-      <% if current_user != nil && @post.user.id == current_user.id %>
-        <ul class="list-group">
-          <li class="list-group-item">Cras justo odio</li>
-          <li class="list-group-item">Dapibus ac facilisis in</li>
-          <li class="list-group-item">Morbi leo risus</li>
-          <li class="list-group-item">Porta ac consectetur ac</li>
-          <li class="list-group-item">Vestibulum at eros</li>
-        </ul>
-      <% end %>
     </div>
 
     <div class="modal fade claim-model">
@@ -131,8 +121,13 @@
         </div>
       </div>
     </div>
-  </div>
 
+    <!--% if current_user != nil && @post.user.id == current_user.id %-->
+      <section class="request-list jumbotron jumbotron-fluid col-md-8 col-md-offset-2">
+        <%= render "request_list" %>
+      </section>
+    <!--% end %-->
+  </div>
 </div>
 
 <%= javascript_tag do %>
