all category, more data for posts.

--- a/app/views/giveaways/select_category.html.erb
+++ b/app/views/giveaways/select_category.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container p-b-3">
   <h2 class="section-header"><%= t('giveaway.select_category') %></h2>
   <%= render partial: 'category', collection: @categories %>
 </div>
