--- a/app/assets/stylesheets/campaigns.scss
+++ b/app/assets/stylesheets/campaigns.scss
@@ -43,3 +43,10 @@
     margin-bottom: 30px;
   }
 }
+
+.campaigns.show {
+  .hero-img {
+    background-position: center center;
+    background-size: cover;
+  }
+}
