add datetime to request

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -281,6 +281,11 @@ $detail_col_padding_top: 101px;
           }
         }
 
+        .request-date {
+          float: right;
+          margin-top: -15px;
+        }
+
         form {
           display: inline-block;
           float: right;
