--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -57,8 +57,8 @@
         </li>
       </ul>
 
-      <button class="btn btn-primary btn-block" data-toggle="modal" data-target=".claim-model"><%= t(".request_now") %></button>
-      <button class="btn btn-info btn-block" data-toggle="modal" data-target=".send-message-model"><%= t(".send_message") %></button>
+      <button class="js-required-login btn btn-primary btn-block" data-toggle="modal" data-target-x=".claim-model"><%= t(".request_now") %></button>
+      <button class="js-required-login btn btn-info btn-block" data-toggle="modal" data-target-x=".send-message-model"><%= t(".send_message") %></button>
 
     </div>
 
@@ -158,6 +158,7 @@
   window.sentMessageSuccess = "<%= t(".sentMessageSuccess") %>";
   window.sendMessageText = "<%= t(".send_message") %>";
   window.requestCount = <%= @post.requests.count %>;
+  window.signed_in = <%= user_signed_in? %>;
 <% end %>
 
 <script type="text/javascript">
@@ -211,5 +212,17 @@
     if (window.location.search.indexOf("new_post=true") >= 0) {
       $('#social-share').modal()
     }
+
+    $(".js-required-login").click(function (event) {
+      event.preventDefault();
+
+      if (!window.signed_in) {
+        window.location.href = '/users/sign_in?return_url=' + window.location.href;
+      }
+      else {
+        model = $(event.target).attr('data-target-x');
+        $(model).modal()
+      }
+    });
   });
 </script>
