remove shadow in button. change style of back-to-top.

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -351,8 +351,12 @@
   -ms-transform: translateY(150%);
   transform: translateY(150%);
 
-  &:hover .fa {
-    color: $primary_color;
+  &:hover {
+    background-color: $primary_color;
+
+    .fa {
+      color: #fff;
+    }
   }
 
   &.slideIn {
