--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -16,7 +16,7 @@ button {
   background-color: #aaa;
   border: none;
   border-radius: 24px;
-  box-shadow: 0 2px 0 #888, 1px 4px 2px rgba(0,0,0,0.2);
+  // box-shadow: 0 2px 0 #888, 1px 4px 2px rgba(0,0,0,0.2);
   color: white;
   display: block;
   font-family: sans-serif;
@@ -26,9 +26,8 @@ button {
   padding: 1em 0;
   position: relative;
   overflow: hidden;
-  text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
+  // text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
   width: 160px;
-  margin-right: 10px;
 }
 
 button[data-sharer="facebook"] {
