--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,4 @@
-<div class="container">
-  <!-- notice -->
-  <p id="notice"><%= notice %></p>
-
+<div class="container post-container">
   <!-- location selection -->
   <section class="alert alert-success location-alert" style="display: none">
     <span>
