--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,7 +10,7 @@
 <% end %>
 
 
-<div class="container detail-page p-b-3">
+<div class="container post-container detail-page p-b-3">
   <div class="row">
 
     <!-- sharing -->
@@ -203,7 +203,7 @@
 
     window.registerEventForRequestActionBtns = function () {
       for (var i = 0; i < window.requestCount; i++) {
-        registerFromEvent(".request-content-" + i, "Somthing...");  
+        registerFromEvent(".request-content-" + i, "Somthing...");
       }
     }
 
