--- a/app/assets/stylesheets/bootstrap-fix.scss
+++ b/app/assets/stylesheets/bootstrap-fix.scss
@@ -1,3 +1,7 @@
+input[type="date"].form-control {
+    line-height: 1.25rem;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Open Sans', sans-serif;
 }
