--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -246,6 +246,10 @@ $detail_col_padding_top: 101px;
 
   .btn {
     margin-bottom: 10px;
+
+    &.request-list-btn {
+      margin-top: 50px;
+    }
   }
 
   .request-list {
