--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -1,3 +1,7 @@
-// Place all the styles related to the Messages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.conversations {
+  .accepted-status {
+    color: #5cb85c;
+    line-height: 40px;
+    margin-right: 12px;
+  }
+}
