--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -9,46 +9,50 @@
   width: 100%;
   padding-left: 35px;
   padding-bottom: 20px;
+
+  button {
+    float: left;
+    background-color: #aaa;
+    border: none;
+    border-radius: 24px;
+    // box-shadow: 0 2px 0 #888, 1px 4px 2px rgba(0,0,0,0.2);
+    color: white;
+    display: block;
+    font-family: sans-serif;
+    font-size: .85em;
+    font-weight: 300;
+    outline: none;
+    padding: 1em 0;
+    position: relative;
+    overflow: hidden;
+    // text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
+    width: 30%;
+    margin-right: 10px;
+  }
+
+  button[data-sharer="facebook"] {
+    background-color: #3b5998;
+    box-shadow: 0 2px 0 #224389, 1px 4px 2px rgba(0,0,0,0.2);
+  }
+  button[data-sharer="linkedin"] {
+    background-color: #007AB5;
+    box-shadow: 0 2px 0 #005E8C, 1px 4px 2px rgba(0,0,0,0.2);
+  }
+  button[data-sharer="googleplus"] {
+    background-color: #DD4C39;
+    box-shadow: 0 2px 0 #BB2D1A, 1px 4px 2px rgba(0,0,0,0.2);
+  }
+
+  button:active {
+    box-shadow: 0 0 0 transparent;
+    transform: translateY(2px);
+  }
+
+  button:hover {
+    text-decoration: none;
+    transition: all .2s ease-in-out;
+    transform: scale(1.1);
+  }
+
 }
 
-button {
-  float: left;
-  background-color: #aaa;
-  border: none;
-  border-radius: 24px;
-  // box-shadow: 0 2px 0 #888, 1px 4px 2px rgba(0,0,0,0.2);
-  color: white;
-  display: block;
-  font-family: sans-serif;
-  font-size: .85em;
-  font-weight: 300;
-  outline: none;
-  padding: 1em 0;
-  position: relative;
-  overflow: hidden;
-  // text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
-}
-
-button[data-sharer="facebook"] {
-  background-color: #3b5998;
-  box-shadow: 0 2px 0 #224389, 1px 4px 2px rgba(0,0,0,0.2);
-}
-button[data-sharer="linkedin"] {
-  background-color: #007AB5;
-  box-shadow: 0 2px 0 #005E8C, 1px 4px 2px rgba(0,0,0,0.2);
-}
-button[data-sharer="googleplus"] {
-  background-color: #DD4C39;
-  box-shadow: 0 2px 0 #BB2D1A, 1px 4px 2px rgba(0,0,0,0.2);
-}
-
-button:active {
-  box-shadow: 0 0 0 transparent;
-  transform: translateY(2px);
-}
-
-button:hover {
-  text-decoration: none;
-  transition: all .2s ease-in-out;
-  transform: scale(1.1);
-}
