add close and publish button

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -252,6 +252,10 @@ $detail_col_padding_top: 101px;
     }
   }
 
+  a.btn {
+    display: inline-block;
+  }
+
   .request-list {
     font-family: Gotham;
     margin-top: 30px;
